--- a/style.css
+++ b/style.css
@@ -31,12 +31,17 @@
     justify-content: end;
 }
 
+
 .align-center{
     align-items: center;
 }
 
 .position-fixed{
     position: fixed;
+}
+
+.position-absolute{
+    position: absolute;
 }
 
 .max-width{
@@ -71,7 +76,7 @@
     background-color: rgb(20, 25, 34);
     width: calc(100vw - 200px);
     height: calc(100vh - 100px);
-
+    position: relative;
 }
 
 .music-bar{
@@ -204,4 +209,59 @@
 
 .other-options i{
     margin: 0 5px;
+}
+
+.nav{
+    background-color: rgba(0,0,0,0.5);
+    height: 100px;
+}
+
+.upgrade{
+    width: 180px;
+    border: 2px solid white;
+    font-weight: bold;
+    border-radius: 30px;
+    margin-right: 10px;
+}
+
+.categorie{
+    margin-top: 130px;
+    text-align: center;
+}
+
+.categorie span{
+    font-size: 0.9em;
+    display: inline-block;
+    margin: 7px 8px;
+}
+
+.brani{
+    margin-top: 30px;
+    padding-left: 15px;
+}
+
+.album-recenti{
+    margin-top: 15px;
+}
+
+.album-recenti > div{
+    width: calc(100% / 6);
+    margin: 0 5px;
+}
+
+.album-recenti *{
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+}
+
+.john-joe{
+    margin-top: 35px;
+}
+
+.john-joe *{
+    margin-bottom: 10px;
+}
+
+.radius{
+    border-radius: 90px;
 }
