--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 /* utility class*/
 
+
 .d-flex{
     display: flex;
 }
@@ -196,10 +197,14 @@
 }
 
 .bar{
-    border: 2px solid  rgb(163, 163, 163);
+    /*border: 2px solid  rgb(163, 163, 163);*/
     width: 80%;
     height: 0;
     margin-top: 4px;
+}
+
+.solid-bar{
+    border: 2px solid 
 }
 
 
@@ -217,6 +222,7 @@
 }
 
 .upgrade{
+    cursor: pointer;
     width: 180px;
     border: 2px solid white;
     font-weight: bold;
@@ -225,6 +231,7 @@
 }
 
 .categorie{
+    color: rgb(163, 163, 163);;
     margin-top: 130px;
     text-align: center;
 }
@@ -263,5 +270,69 @@
 }
 
 .radius{
-    border-radius: 90px;
+    border-radius: 105px;
+}
+
+/* css hover */
+
+.img-hide{
+    display: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.icona-hover{
+    font-size: 3em;
+}
+
+.padre-album:hover .img-hide{
+        display: flex!important;
+        align-items: center;
+        justify-content: center;
+}
+
+.upgrade:hover{
+    width: 190px;
+    height: calc(50% + 10px);
+}
+
+.display-menu > div:hover, .playlist > div:hover{
+    color: white;
+}
+
+.nome-canzone:hover span{
+    text-decoration: underline;
+}
+
+.icon-bar > i:hover{
+    color: white!important;
+}
+
+.utente > div:first-child:hover{
+    color: white;
+} 
+
+.avvia-canzone .fa-circle-play:hover{
+    font-size: 1.8em!important;
+}
+
+.categorie span:hover{
+    color: white;
+}
+
+.circle-ball{
+    display: none;
+}
+
+.bar:hover > div:first-child{
+    border: 2px solid green!important;
+}
+
+.bar:hover .circle-ball{
+    display: inline;
+    margin: 0;
 }
